src/objects/Association_Reason__c.object
<CustomObject>
    <fields>
        <fullName>Action_Code__c</fullName>
        <label>Action Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quality_code__c</fullName>
        <label>Quality code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>Association Reason</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Action_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Association Reasons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>